<resources>
    <string name="app_name">Activity Monitor</string>
    <string name="action_settings">Settings</string>

    <!--InformationInputView-->
        <!--Title-->
    <string name="title_activity_information_input_view">Information Input</string>
        <!--Labels-->
    <string name="user_name_label">Name:</string>
    <string name="body_wieght_label">Body Weight:</string>
    <string name="height_label">Height:</string>
    <string name="age_label">Age:</string>
    <string name="gender_label">Gender:</string>
        <!--Buttons-->
    <string name="submit_personal_info">Submit Information</string>
    <string name="inches_label">in.</string>
    <string name="centimeters_label">cm.</string>
    <string name="pounds_label">lbs</string>
    <string name="kilograms_label">kg</string>
        <!--Messages-->
    <string name="incomplete_information">Fill out all fields!</string>

    <!--CalculateActivityView-->
        <!--Title-->
    <string name="title_activity_calculate_activity_view">Activity Input</string>
        <!--Labels-->
    <string name="unit_switch_label">Unit:</string>
    <string name="calories_desired_label">Calories to Burn:</string>
    <string name="running_time_label">Run:</string>
    <string name="walking_time_label">Walked:</string>
    <string name="bmr_label">(BMR):</string>
    <string name="height">Height:</string>
    <string name="weight">Weight:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="calories"> calories</string>
        <!--Buttons-->
    <string name="male_radio_button">Male</string>
    <string name="female_radio_button">Female</string>
    <string name="calculate_progress">Calculate Progress</string>
    <string name="miles_label">mi</string>
    <string name="kilometers_label">km</string>
        <!--Default Texts-->
    <string name="default_distance">0.00</string>
    <string name="default_goal">2500</string>
    <string name="default_progress_text">0/2500</string>
        <!--Messages-->
    <string name="calorie_goal_required">Calories to burn is required!</string>
    <string name="goal_complete">Congratualations! You have met your goal!</string>
    <string name="lazy_bum">You need to do more activity!</string>
</resources>
