<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".InformationInput"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name_label"
            android:textSize="@dimen/label_text_size"
            android:layout_margin="@dimen/widget_margin"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/widget_margin"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/body_wieght_label"
            android:textSize="@dimen/label_text_size"
            android:layout_margin="@dimen/widget_margin" />
        <EditText
            android:id="@+id/bodyweight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:layout_margin="@dimen/widget_margin"
            android:inputType="numberDecimal"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/weight_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/pounds_label"
            android:textOn="@string/kilograms_label"
            android:layout_margin="@dimen/widget_margin"
            android:textAllCaps="false" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height_label"
            android:textSize="@dimen/label_text_size"
            android:layout_margin="@dimen/widget_margin"/>
        <EditText
            android:id="@+id/height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:minWidth="60dp"
            android:layout_margin="@dimen/widget_margin"
            android:layout_weight="1"/>
        <ToggleButton
            android:id="@+id/height_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/inches_label"
            android:textOn="@string/centimeters_label"
            android:layout_margin="@dimen/widget_margin"
            android:textAllCaps="false" />
            <!--android:background="@android:drawable/btn_default"-->
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_label"
            android:textSize="@dimen/label_text_size"
            android:layout_margin="@dimen/widget_margin"/>
        <EditText
            android:id="@+id/age"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:layout_margin="@dimen/widget_margin"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textSize="@dimen/label_text_size"
            android:layout_margin="@dimen/widget_margin"/>
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:text="@string/male_radio_button"
            android:onClick="updateGender"/>
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:text="@string/female_radio_button"
            android:onClick="updateGender"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/submit_personal_info"
            android:layout_margin="@dimen/widget_margin"
            android:textSize="@dimen/label_text_size"
            android:textAlignment="center"
            android:layout_weight="1"
            android:onClick="processInformation"/>
    </LinearLayout>
</LinearLayout>
