<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.andres.activitymonitor.CalculateActivityView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"/>
        <TextView
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1" />
        <TextView
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:text="@string/bmr_label"
            android:textSize="@dimen/label_text_size"/>
        <TextView
            android:id="@+id/bmr_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/widget_margin"
            android:textSize="@dimen/label_text_size"
            android:text=""/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:text="@string/calories_desired_label"
            android:textSize="@dimen/label_text_size"/>
        <EditText
            android:id="@+id/calories_to_burn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:layout_weight="1"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:text="@string/default_goal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/running_time_label"
            android:selectAllOnFocus="true"
            android:layout_margin="@dimen/widget_margin"
            android:textSize="@dimen/label_text_size"/>
        <EditText
            android:id="@+id/distance_running"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/widget_margin"
            android:hint="@string/default_distance"
            android:inputType="numberDecimal"/>
        <ToggleButton
            android:id="@+id/run_unit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:textOff="@string/miles_label"
            android:textOn="@string/kilometers_label"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walking_time_label"
            android:textSize="@dimen/label_text_size"
            android:layout_margin="@dimen/widget_margin"/>
        <EditText
            android:id="@+id/distance_walking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:layout_weight="1"
            android:selectAllOnFocus="true"
            android:hint="@string/default_distance"
            android:inputType="numberDecimal"/>
        <ToggleButton
            android:id="@+id/walk_unit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:textOff="@string/miles_label"
            android:textOn="@string/kilometers_label"
            android:textAllCaps="false"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/widget_margin"
            android:layout_weight="1"
            android:text="@string/calculate_progress"
            android:textSize="@dimen/label_text_size"
            android:onClick="calculate"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleHorizontal" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/progress_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_progress_text"
            android:layout_centerInParent="true"
            android:textAlignment="center" />
    </RelativeLayout>

</LinearLayout>
